Refactor code and improve exception handling
Removed final keyword from method arguments in multiple classes for code simplicity. Made minor changes to exception handling for better understanding and readability. Also, updated some string values in CertaintyComboBoxModel class for better user understanding.

Add new UI classes for editing events and repositories

The new classes will allow users to edit various types of events, with specific fields for different event types. A new dialog interface has also been created for editing repository information. The changes include new table rows for different data types, new input fields, and additional UI elements such as buttons and checkboxes. The UI update also features helper classes for data transfer and error handling.

Refactor code to simplify border addition, rename variables

The code has been refactored by replacing 'addBorderIfDataPresent' method with 'addBorder' for simplicity. The GUI variables have been renamed in a descriptive manner for better understanding of their functions.

Refactor RepositoryDialog class

Unnecessary imports, static fields, methods, and comments have been removed from the RepositoryDialog class. Some layout changes have also been implemented. This serves to improve the code's readability and maintainability by removing redundant components and optimizing the overall structure of the class.
Implement new record creation in RepositoryDialog

The code for creating a new record in RepositoryDialog has been filled out. This includes steps for creating a new record, adding it to the repository store, resetting the filter, adding the new repository id to the table, and selecting and making the new record visible. Also, the code added a new import for RowSorter for table row sorting after adding a new record.

Refactor repository ID assignment and implement deleteAction

The generation of new repository IDs has been adjusted to consider the highest existing ID, instead of the repository size